# adaptive-reranker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/adaptive_reranker/: __init__.py
src/adaptive_reranker/labeling/: __init__.py  pipeline.py  rerank_validator.py  utils.py
tests/: generate_example.py
