[project]
name = "adaptive-reranker"
version = "0.1.1"
description = "Adaptive reranker selection via per-query labeling"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
dependencies = [
    "ir-datasets>=0.5.11",
    "pandas>=2.3.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.2",
    "FlagEmbedding>=1.2.0",
    "pydantic>=2.0",
    "torch>=2.0",
    "transformers>=4.38,<4.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adaptive_reranker"]
[project.urls]
Homepage = "https://github.com/emirkaan5/adaptive-reranker/"
Issues = "https://github.com/emirkaan5/adaptive-reranker/Issues"